basic html framework

--- a/index.html
+++ b/index.html
@@ -10,12 +10,40 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
   <body>
-  
+
+    <div class="container"> <!-- entire game is in here -->
+    	
+    	<div class="row"><!-- title -->
+
+    	</div>
+
+        <div class="row"><!-- hangman on left, guessed letters on right -->
+               
+    	    <div class="col-6" id = "hangman-pic"> 
+    	        <img src="images/..." alt="Our poor victim">
+    	    </div>
+
+    	    <div class="col-6" id = "guessed">
+
+    	    </div>
+
+        </div>
+
+        <div class="row"><!-- word being guessed -->
+
+			<div class="text-center" id="word">
+
+			</div>
+
+       	</div>
+
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <!-- Game Logic -->
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
