revised html template

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <body>
 
-    <div class="container"> <!-- entire game is in here -->
+	<header class = ""> <!-- Title bar -->
+
+	</header>
+
+    <div class="container"> <!-- game body is in here -->
     	
-    	<div class="row"><!-- title -->
-
-    	</div>
-
-        <div class="row"><!-- hangman on left, guessed letters on right -->
+    	<div class="row"><!-- hangman on left, guessed letters on right -->
                
     	    <div class="col-6" id = "hangman-pic"> 
     	        <img src="images/..." alt="Our poor victim">
@@ -38,6 +38,10 @@
        	</div>
 
     </div>
+
+    <footer class = ""><!-- game stats here -->
+
+    </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
