--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
      
 	<header class = "h1 text-center"> <!-- Title bar -->
-        HANGMAN
+        BASH HANGMAN
 	</header>
     
     <div class = "h1 text-center" id="bar"><!-- simulates the msDos screen -->
